# amprev

./: README.md  build.sh  clean.sh  meson.build
data/: amprev.desktop.in  amprev.metainfo.xml.in  bar.astware.amprev.gschema.xml  meson.build
data/resources/: style.css
examples/: markdown-regression.md
src/: config.vala.in  main.vala  meson.build
src/app/: actions.vala  application.vala
src/core/: markdown_engine.vala
src/models/: document.vala
src/services/: editor_highlight_service.vala  export_service.vala  sync_service.vala  theme_service.vala
src/ui/: main_window.vala
src/ui/editor/: editor_view.vala
src/ui/preview/: preview_view.vala
